# Multi-agent-SITL-SLAM

./: README.md  REPORT.ipynb
PX4_Files/: jinja_gen.py  our_empty.world  px4-rc.params  sitl_multiple_run.sh
PX4_Files/iris_depth_camera/: iris_depth_camera.sdf  iris_depth_camera.sdf.jinja  iris_depth_camera_1.urdf  iris_depth_camera_2.urdf
map_base_link_publ/: package.xml  setup.cfg  setup.py
map_base_link_publ/map_base_link_publ/: map_base_link_publ.py
map_frame_publisher/: package.xml  setup.cfg  setup.py
map_frame_publisher/map_frame_publisher/: __init__.py  map_frame_publisher.py
pointcloud_combiner/: CMakeLists.txt  package.xml
pointcloud_combiner/src/: pointcloud_combiner.cpp
pointcloud_transformer/: CMakeLists.txt  package.xml
pointcloud_transformer/src/: pointcloud_transformer.cpp
px4_drones_control/: CMakeLists.txt  package.xml
px4_drones_control/src/: px4_drones_control.cpp
px4_offboard/: RVIZconfig.rviz  setup.py
px4_offboard/launch/: offboard_velocity_control.launch.py
px4_offboard/px4_offboard/: processes.py
px4_offboard/urdf/: iris_depth_camera.urdf  iris_depth_camera_1.urdf  iris_depth_camera_2.urdf
